--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,6 +242,9 @@ h4 {
         FOOTER
 #########################################
 */
+.firstDivFifthSec {
+  position: relative;
+}
 footer section .firstDivFifthSec p {
   margin-bottom: 5%;
 }
@@ -268,6 +271,7 @@ input {
     rgba(255, 53, 113, 1) 0%,
     rgba(60, 48, 255, 1) 50%
   );
+  cursor: pointer;
 }
 #lastP {
   margin: 2%;
@@ -276,4 +280,45 @@ input {
   content: "❤️";
   font-size: 1.2rem;
   margin-left: 10px;
+}
+/* 
+# # # # # # # # # # # # # # # # 
+        
+# # # # # # # # # # # # # # # # 
+*/
+.popUpArticle {
+  display: none;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  text-align: center;
+  background: #fff;
+  padding: 5%;
+  margin: 0 auto;
+  box-shadow: 0px 0px 40px #edecec;
+}
+.show {
+  display: inline-block;
+}
+
+.popUpArticle h3 {
+  font-size: 2.2rem;
+  line-height: 1.8;
+}
+.popUpArticle p:first-of-type {
+  font-size: 1.5rem;
+}
+.popUpArticle p {
+  font-size: 0.9rem;
+}
+
+.popUpArticle button {
+  line-height: 1.8;
+  color: #fff;
+  background-color: #3c30ff;
+  padding: 0.5% 1.5%;
+  border-radius: 5px;
+  margin: 5%;
+  border: none;
 }
